# BrahMap

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE.txt  MANIFEST.in  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: documentation.yaml  tests.yaml
.jules/: bolt.md
api_ref/interfaces/deflationlib/: index.html
api_ref/interfaces/linearoperators/: index.html
api_ref/linop/: index.html
api_ref/utilities/: index.html
api_reference/: index.html
api_reference/base_operators/: index.html
api_reference/base_operators/BaseBlockDiagInvNoiseCovLinearOperator/: index.html
api_reference/base_operators/BaseBlockDiagNoiseCovLinearOperator/: index.html
api_reference/base_operators/BaseLinearOperator/: index.html
api_reference/core/: index.html
api_reference/core/GLSResult/: index.html
api_reference/cpp_extensions/: index.html
api_reference/interfaces/: index.html
api_reference/lbsim/: index.html
api_reference/linop/: index.html
api_reference/map_makers/: index.html
api_reference/math_functions/: index.html
api_reference/misc/: index.html
api_reference/utilities/: index.html
api_references/: index.html
brahmap/: __init__.py  mpi.py
brahmap/_extensions/: BlkDiagPrecondLO_tools.cpp  InvNoiseCov_tools.cpp  PointingLO_tools.cpp  __init__.py  compute_weights.cpp  mpi_utils.hpp  repixelization.cpp
brahmap/base/: __init__.py  blkop.py  linop.py  misc.py  noise_ops.py
brahmap/core/: GLS.py  __init__.py  linearoperators.py  noise_operators.py  noise_ops_block_diag.py  noise_ops_circulant.py  noise_ops_diagonal.py  noise_ops_toeplitz.py  process_time_samples.py
brahmap/interfaces/: __init__.py  deflationlib.py  linearoperators.py
brahmap/lbsim/: __init__.py  lbsim_GLS.py  lbsim_noise_operators.py  lbsim_process_time_samples.py
brahmap/linop/: __init__.py  blkop.py  linop.py
brahmap/mapmakers/: GLS.py  __init__.py  lbsim_mapmakers.py
brahmap/math/: __init__.py  linalg.py  linalg_tools.cpp  solvers.py  unary_functions.cpp
brahmap/src/: BlkDiagPrecondLO_tools.cpp  InvNoiseCov_tools.cpp  PointingLO_tools.cpp  SparseLO_tools.cpp  compute_weights.cpp  process_samples.cpp  repixelization.cpp  repixelize.cpp
brahmap/tests/: helper_SparseLO.py  helper_initweigths.py  helper_repixelize.py  test_BlkDiagPrecondLO_tools_cpp.py  test_repixelize_cpp.py
brahmap/utilities/: IOfiles.py  __init__.py  healpy_functions.py  lbsim_interface.py  linear_algebra_funcs.py  mpi.py  process_ces.py  process_time_samples.py  tools.py  utilities_functions.py  visualizations.py
changelog/: index.html
development/: index.html
docs/: index.md  quick_start.md
docs/api_ref/: linop.md  utilities.md
docs/api_reference/: index.md
docs/changelog/: index.md
docs/development/: index.md
docs/overview/: installation.md  license.md  name.md  roadmap.md
docs/quick_start/: index.md
examples/: README.md  basic_noise_covariances.ipynb  block_diagonal_noise_covariances.ipynb  execute_examples.sh  healpix_QU_map_explicit.py  healpix_QU_map_wrapper.ipynb  lbsim_IQU_map_explicit.ipynb  lbsim_IQU_map_wrapper.ipynb  lbsim_IQU_map_wrapper.py  lbsim_noise_covariances.ipynb  rectangular_I_map_explicit.ipynb  rectangular_I_map_wrapper.py
overview/installation/: index.html
overview/license/: index.html
overview/name/: index.html
overview/roadmap/: index.html
quick_start/: index.html
search/: search_index.json
tests/: conftest.py  helper_BlkDiagPrecondLO.py  helper_BlkDiagPrecondLO_tools.py  helper_ComputeWeights.py  helper_PointingLO.py  helper_PointingLO_tools.py  helper_ProcessTimeSamples.py  helper_Repixelization.py  py_BlkDiagPrecondLO.py  py_ComputeWeights.py  py_PointingLO.py  py_PointingLO_tools.py  py_ProcessTimeSamples.py  py_Repixelization.py  template_noise_ops_tests.py  test_BlkDiagPrecondLO.py  test_BlkDiagPrecondLO_tools_cpp.py  test_GLSmapmakers.py  test_InvNoiseCov_tools_cpp.py  test_LBSim_GLS.py  test_LBSim_noise_ops.py  test_PointingLO.py  test_PointingLO_tools_cpp.py  test_ProcessTimeSamples.py  test_SparseLO_tools_cpp.py  test_cg.py  test_compute_weights_cpp.py  test_linalg.py  test_linalg_tools_cpp.py  test_noise_ops_block_diag.py  test_noise_ops_blockdiag_circulant.py  test_noise_ops_blockdiag_diagonal.py  test_noise_ops_blockdiag_toeplitz.py  test_noise_ops_circulant.py  test_noise_ops_diagonal.py  test_noise_ops_toeplitz.py  test_process_samples_cpp.py  test_repixelization_cpp.py  test_repixelize_cpp.py  test_unary_functions_cpp.py  (+1 more)
tests/tools/: mpiexec_test_loop.sh
user_guide/: index.html
(+148 files in other folders)
